src/BadLang/Tests/BadC.Tests/tests/passing/operators/Cast16To8.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.cstr FailMsg assembly "16-bit to 8-bit Cast Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		i16 valueA = 10;

		i8 value = cast<i8>(valueA);

		TestFramework::Assert::Equals8(value, 10, &data::FailMsg);

		halt;
	}
}