src/BadLang/Tests/BadC.Tests/tests/failing/TypeMismatchException/InvalidTypeLess.basm

.code code code_raw BadC
{
	void __main__() : export
	{
		i16 valueA = 10;
		i8 valueB = 11;
		i8 valueC = valueA < valueB;
		halt;
	}
}